exports for loggers

--- a/echobot.cabal
+++ b/echobot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3de4e5539b50482c5aa287b42685fe453eaf50eabe645ff44b4ab9ae5548ccaa
+-- hash: d8f1b3ad7e2f8c9d62d9ef96d5d09de4bef20e8c8cbfc51ea614a99df766c7fe
 
 name:           echobot
 version:        0.1.0.0
@@ -51,6 +51,7 @@ library
       Bot.VK.Config
       Logger
       Logger.Console
+      NEW.Bot
       NEW.Logger
       NEW.Logger.Console
   other-modules:
