--- a/echobot.cabal
+++ b/echobot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8a104dfd43e8b33b64f4b6bb256c153d8877f2de68d23a69b3d2554df53c3544
+-- hash: ac0aa9ebceb6455033b903fee0645bf1adbddfb9c85dec728331e876c5e5441b
 
 name:           echobot
 version:        0.1.0.0
@@ -27,7 +27,10 @@ source-repository head
 
 library
   exposed-modules:
+      Bot
+      Bot.Telegram
       Logger
+      WebDriver
   other-modules:
       Paths_echobot
   hs-source-dirs:
@@ -37,9 +40,13 @@ library
     , base >=4.7 && <5
     , bytestring
     , containers
+    , http-client
     , lens
+    , modern-uri
+    , req
     , text
     , time
+    , vector
     , wreq
     , yaml
   default-language: Haskell2010
@@ -57,9 +64,13 @@ executable echobot-exe
     , bytestring
     , containers
     , echobot
+    , http-client
     , lens
+    , modern-uri
+    , req
     , text
     , time
+    , vector
     , wreq
     , yaml
   default-language: Haskell2010
@@ -78,9 +89,13 @@ test-suite echobot-test
     , bytestring
     , containers
     , echobot
+    , http-client
     , lens
+    , modern-uri
+    , req
     , text
     , time
+    , vector
     , wreq
     , yaml
   default-language: Haskell2010
