templates for telgeram and vk

--- a/echobot.cabal
+++ b/echobot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ee893e9eddeccc332018d5de18529a49e783970ca11843b06f826c31d1c3b237
+-- hash: f0e6269217730ed2595083c0d3bcf0a18b9a31b2a0deb01c506cfc9d43bbea1a
 
 name:           echobot
 version:        0.1.0.0
@@ -28,6 +28,8 @@ source-repository head
 library
   exposed-modules:
       Bot
+      Bot.Telegram
+      Bot.VK
       Logger
       Logger.FileLogger
       Logger.StdLogger
@@ -39,15 +41,11 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
-    , containers
-    , http-client
     , lens
-    , modern-uri
     , mtl
-    , req
+    , random
     , text
     , time
-    , vector
     , wreq
     , yaml
   default-language: Haskell2010
@@ -63,16 +61,12 @@ executable echobot-exe
       aeson
     , base >=4.7 && <5
     , bytestring
-    , containers
     , echobot
-    , http-client
     , lens
-    , modern-uri
     , mtl
-    , req
+    , random
     , text
     , time
-    , vector
     , wreq
     , yaml
   default-language: Haskell2010
@@ -89,16 +83,12 @@ test-suite echobot-test
       aeson
     , base >=4.7 && <5
     , bytestring
-    , containers
     , echobot
-    , http-client
     , lens
-    , modern-uri
     , mtl
-    , req
+    , random
     , text
     , time
-    , vector
     , wreq
     , yaml
   default-language: Haskell2010
