--- a/package.yaml
+++ b/package.yaml
@@ -34,6 +34,7 @@ dependencies:
 library:
   source-dirs: src
 
+
 executables:
   echobot-exe:
     main:                Main.hs
@@ -42,6 +43,8 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Werror
     dependencies:
     - echobot
 
@@ -53,5 +56,7 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -Wall
+    - -Werror
     dependencies:
     - echobot
