--- a/echobot.cabal
+++ b/echobot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1410ae11a7c519ea8bf3933f396e3f9eb20440f0fe5bffce8fb9245d9f98e6d0
+-- hash: 9cddb865f552711fed67f2454114e0770f10d798fb453d4c5c2e2839f2457cbf
 
 name:           echobot
 version:        0.1.0.0
@@ -26,6 +26,9 @@ source-repository head
   location: https://github.com/shamsiev/echobot
 
 library
+  exposed-modules:
+      Logger
+      Logger.StdLogger
   other-modules:
       Paths_echobot
   hs-source-dirs:
@@ -36,10 +39,8 @@ library
     , bytestring
     , containers
     , hspec
-    , lens
     , text
     , time
-    , wreq
     , yaml
   default-language: Haskell2010
 
@@ -57,10 +58,8 @@ executable echobot-exe
     , containers
     , echobot
     , hspec
-    , lens
     , text
     , time
-    , wreq
     , yaml
   default-language: Haskell2010
 
@@ -79,9 +78,7 @@ test-suite echobot-test
     , containers
     , echobot
     , hspec
-    , lens
     , text
     , time
-    , wreq
     , yaml
   default-language: Haskell2010
