--- a/echobot.cabal
+++ b/echobot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 89cdcfb33ce73cdc360be2cd440f723a525efd2a80e0aa8e805770e5e56618e2
+-- hash: 254a46a90fcb3bb14467631ac58402ab558af7f01a503526f31063a2f0a912e8
 
 name:           echobot
 version:        0.1.0.0
@@ -56,7 +56,7 @@ executable echobot-exe
       Paths_echobot
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -77,7 +77,7 @@ test-suite echobot-test
       Paths_echobot
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:
       aeson
     , base >=4.7 && <5
